# researcher-agent

./: .gitignore  README.md  demo.py  demo_advanced.py  demo_cosmos.py  demo_eval.py  demo_fusion.py  demo_postgres.py  demo_rag.py  demo_real_google.py  pyproject.toml
argus/: DOCUMENTATION.md  __init__.py  config.py  llm.py  orchestrator.py  safety.py  state.py
argus/analyst/: __init__.py  classifier.py  decomposer.py  executor.py  relevance.py  schema.py  sql_gen.py
argus/db/: advanced_connectors.py  connector.py
argus/synthesizer/: __init__.py  memo.py
